attempt to fix flicker on animate-in gsap elements

--- a/src/scss/partials/globals/_global.scss
+++ b/src/scss/partials/globals/_global.scss
@@ -260,8 +260,7 @@ hr.vertical {
   }
 }
 .animate-in {
-  opacity: 0;
-  transform: translateY(100px);
+  visibility: hidden;
 }
 .hours-of-operation {
   margin-top: 30px;
